# AMSC-Project

./: .gitignore  README.md  pyproject.toml
guides/: massive_testing.md
src/: Makefile  functions.cpp  interfaces.cpp  interfaces.hpp  main_parallel  main_parallel.cpp  main_serial  main_serial.cpp  make.dep  methods.hpp  particle.hpp  plots.py  pso_mpi.cpp  pso_serial.cpp  run_plots.py  run_tests.sh  utilities.hpp
src/small_world/: Makefile  a  create_network.cpp  create_network.hpp  create_scale_free.cpp  create_scale_free.hpp  instructions_exec.txt  main_small.cpp  pso_small.cpp
src/topology/: Makefile  a  commented_code.cpp  confront.cpp  confront.hpp  create_network.cpp  create_network.hpp  main_small  main_topology.cpp  main_topology_double_version.cpp  pso_debugger.cpp  pso_k.cpp  pso_topology.cpp  pso_topology.hpp  pso_topology_2.cpp
