[project]
name = "swarm-search-2-swarmsearch"
version = "0.1.0"
description = ""
authors = [
    {name = "lordPachy",email = "francescocalzona03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
